# aos8-to-aos10-acl-converter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
aos8_acl_converter/: __init__.py  __main__.py  cli.py  parser.py  renderer.py  report.py
examples/: bridge_mode.cfg  sample_aos8.cfg
tests/: test_converter.py
web/: README.md  build.sh  e2e_browser.mjs  package-lock.json  package.json  verify_pyodide.mjs  wrangler.jsonc
web/public/: index.html
web/public/py/: web_adapter.py
web/public/py/aos8_acl_converter/: canonical.py  core.py  parser.py  reader.py  renderer.py
web/public/static/: app.js  style.css
